// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass on packages/eslint-config-browser/test/fixtures/rules/best-practices/best-practices.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 5,
    "rule": "no-alert",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 6,
    "rule": "no-alert",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 7,
    "rule": "no-alert",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 12,
    "rule": "no-global-assign",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/rules/variables/variables.js 1`] = `
Array [
  Object {
    "column": 21,
    "line": 8,
    "rule": "no-restricted-globals",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es6/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es6-modules/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 5,
    "rule": "strict",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 9,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es6-modules/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es6-modules/nested/require.config.js 1`] = `
Array [
  Object {
    "column": 14,
    "line": 5,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es6-modules/require.config.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es6-modules/require.js 1`] = `
Array [
  Object {
    "column": 14,
    "line": 5,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es7/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 12,
    "line": 5,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es7/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es8/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es8-babel-parser/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 19,
    "line": 4,
    "rule": "babel/no-invalid-this",
    "severity": 2,
  },
  Object {
    "column": 27,
    "line": 11,
    "rule": "babel/semi",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 15,
    "rule": "babel/object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 29,
    "line": 19,
    "rule": "babel/new-cap",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es8-babel-parser/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es9/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es9-object-spread/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 5,
    "rule": "prefer-object-spread",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es9-object-spread/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-browser/test/fixtures/samples/es10/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/best-practices/best-practices.js 1`] = `
Array [
  Object {
    "column": 22,
    "line": 19,
    "rule": "array-callback-return",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 70,
    "rule": "curly",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 85,
    "rule": "default-case",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 109,
    "rule": "dot-location",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 125,
    "rule": "dot-notation",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 139,
    "rule": "eqeqeq",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 139,
    "rule": "eqeqeq",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 175,
    "rule": "no-caller",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 187,
    "rule": "no-case-declarations",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 220,
    "rule": "no-else-return",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 247,
    "rule": "no-empty-pattern",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 269,
    "rule": "no-eval",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 274,
    "rule": "no-extend-native",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 282,
    "rule": "no-extra-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 299,
    "rule": "no-fallthrough",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 326,
    "rule": "no-floating-decimal",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 336,
    "rule": "no-global-assign",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 350,
    "rule": "no-implied-eval",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 363,
    "rule": "no-invalid-this",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 375,
    "rule": "no-iterator",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 382,
    "rule": "no-labels",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 383,
    "rule": "no-labels",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 391,
    "rule": "no-lone-blocks",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 408,
    "rule": "no-loop-func",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 426,
    "rule": "no-multi-spaces",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 430,
    "rule": "no-multi-spaces",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 452,
    "rule": "no-new",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 459,
    "rule": "no-new-func",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 470,
    "rule": "no-new-wrappers",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 498,
    "rule": "no-proto",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 511,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 512,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 530,
    "rule": "no-return-assign",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 554,
    "rule": "no-script-url",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 562,
    "rule": "no-self-assign",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 571,
    "rule": "no-self-compare",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 580,
    "rule": "no-sequences",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 589,
    "rule": "no-throw-literal",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 603,
    "rule": "no-unmodified-loop-condition",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 614,
    "rule": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 627,
    "rule": "no-useless-call",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 640,
    "rule": "no-useless-concat",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 656,
    "rule": "no-useless-escape",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 670,
    "rule": "no-useless-return",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 688,
    "rule": "no-void",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 695,
    "rule": "no-warning-comments",
    "severity": 1,
  },
  Object {
    "column": 54,
    "line": 706,
    "rule": "prefer-promise-reject-errors",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 717,
    "rule": "radix",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 736,
    "rule": "wrap-iife",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 754,
    "rule": "yoda",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/best-practices/best-practices-non-strict.js 1`] = `
Array [
  Object {
    "column": 17,
    "line": 7,
    "rule": "no-octal",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 18,
    "rule": "no-octal-escape",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 32,
    "rule": "no-with",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/best-practices/es8/best-practices.js 1`] = `
Array [
  Object {
    "column": 16,
    "line": 8,
    "rule": "no-return-await",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/best-practices/no-implicit-globals/no-implicit-globals.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 5,
    "rule": "no-implicit-globals",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/errors/errors.js 1`] = `
Array [
  Object {
    "column": 9,
    "line": 16,
    "rule": "no-compare-neg-zero",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 35,
    "rule": "no-cond-assign",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 67,
    "rule": "no-constant-condition",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 84,
    "rule": "no-control-regex",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 92,
    "rule": "no-debugger",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 98,
    "rule": "no-dupe-args",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 98,
    "rule": "no-redeclare",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 114,
    "rule": "no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 132,
    "rule": "no-duplicate-case",
    "severity": 2,
  },
  Object {
    "column": 26,
    "line": 156,
    "rule": "no-empty",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 167,
    "rule": "no-empty-character-class",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 184,
    "rule": "no-extra-boolean-cast",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 201,
    "rule": "no-extra-parens",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 218,
    "rule": "no-extra-semi",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 227,
    "rule": "no-func-assign",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 245,
    "rule": "no-inner-declarations",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 261,
    "rule": "no-invalid-regexp",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 274,
    "rule": "new-cap",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 274,
    "rule": "no-obj-calls",
    "severity": 2,
  },
  Object {
    "column": 47,
    "line": 283,
    "rule": "no-prototype-builtins",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 297,
    "rule": "no-regex-spaces",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 307,
    "rule": "no-sparse-arrays",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 307,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 314,
    "rule": "no-template-curly-in-string",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 327,
    "rule": "no-unreachable",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 344,
    "rule": "no-unsafe-finally",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 351,
    "rule": "no-unsafe-negation",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 362,
    "rule": "use-isnan",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 377,
    "rule": "valid-typeof",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/errors/es8/errors.js 1`] = `
Array [
  Object {
    "column": 20,
    "line": 15,
    "rule": "no-await-in-loop",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/jsdoc/jsdoc.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/require-param",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/require-param",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 6,
    "rule": "jsdoc/newline-after-description",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 7,
    "rule": "jsdoc/check-param-names",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 7,
    "rule": "jsdoc/check-types",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 7,
    "rule": "jsdoc/require-hyphen-before-param-description",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 8,
    "rule": "jsdoc/require-returns-type",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/strict/strict.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "strict",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "strict",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/style/style.js 1`] = `
Array [
  Object {
    "column": 8,
    "line": 9,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 9,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 19,
    "rule": "block-spacing",
    "severity": 2,
  },
  Object {
    "column": 38,
    "line": 19,
    "rule": "block-spacing",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 31,
    "rule": "brace-style",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 43,
    "rule": "camelcase",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 54,
    "rule": "capitalized-comments",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 146,
    "rule": "comma-dangle",
    "severity": 2,
  },
  Object {
    "column": 32,
    "line": 161,
    "rule": "comma-spacing",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 174,
    "rule": "comma-style",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 192,
    "rule": "computed-property-spacing",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 210,
    "rule": "consistent-this",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 235,
    "rule": "func-call-spacing",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 269,
    "rule": "func-style",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 269,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 300,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 326,
    "rule": "key-spacing",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 342,
    "rule": "keyword-spacing",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 380,
    "rule": "lines-around-directive",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 399,
    "rule": "max-depth",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 425,
    "rule": "max-len",
    "severity": 1,
  },
  Object {
    "column": 27,
    "line": 456,
    "rule": "max-nested-callbacks",
    "severity": 1,
  },
  Object {
    "column": 31,
    "line": 457,
    "rule": "max-nested-callbacks",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 472,
    "rule": "max-params",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 487,
    "rule": "max-statements",
    "severity": 1,
  },
  Object {
    "column": 47,
    "line": 656,
    "rule": "max-statements-per-line",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 687,
    "rule": "new-cap",
    "severity": 2,
  },
  Object {
    "column": 24,
    "line": 702,
    "rule": "new-parens",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 717,
    "rule": "padding-line-between-statements",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 733,
    "rule": "padding-line-between-statements",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 755,
    "rule": "no-array-constructor",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 768,
    "rule": "no-bitwise",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 801,
    "rule": "no-lonely-if",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 816,
    "rule": "no-mixed-operators",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 816,
    "rule": "no-mixed-operators",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 840,
    "rule": "no-multiple-empty-lines",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 861,
    "rule": "no-nested-ternary",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 861,
    "rule": "no-nested-ternary",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 884,
    "rule": "no-new-object",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 900,
    "rule": "no-plusplus",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 945,
    "rule": "no-unneeded-ternary",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 959,
    "rule": "no-whitespace-before-property",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 999,
    "rule": "object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 999,
    "rule": "object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1011,
    "rule": "object-property-newline",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 1035,
    "rule": "one-var",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 1068,
    "rule": "operator-linebreak",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 1080,
    "rule": "padded-blocks",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 1084,
    "rule": "padded-blocks",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 1099,
    "rule": "quote-props",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1115,
    "rule": "quotes",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 1131,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 1142,
    "rule": "semi-spacing",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 1171,
    "rule": "space-before-blocks",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1186,
    "rule": "space-before-function-paren",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1201,
    "rule": "space-in-parens",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1201,
    "rule": "space-in-parens",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1216,
    "rule": "space-infix-ops",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 1226,
    "rule": "space-unary-ops",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 1233,
    "rule": "spaced-comment",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 1234,
    "rule": "spaced-comment",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 1245,
    "rule": "template-tag-spacing",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/style/style-lines.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 1,
    "rule": "max-lines",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 4,
    "rule": "strict",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/variables/variables.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 27,
    "rule": "no-delete-var",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 49,
    "rule": "no-shadow-restricted-names",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 56,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 63,
    "rule": "no-undef-init",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 81,
    "rule": "no-use-before-define",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 93,
    "rule": "no-use-before-define",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-core/test/fixtures/rules/variables/variables-with-unused.js 1`] = `
Array [
  Object {
    "column": 11,
    "line": 10,
    "rule": "no-unused-vars",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-isomorphic/test/fixtures/globals/globals.config.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/rules/jest/jest.spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 6,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 13,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 21,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 30,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 41,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/__tests__/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/jest.spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/jest.test.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/non-test-file.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 6,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 11,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 13,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 18,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 19,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 21,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 22,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 27,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 28,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 31,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 32,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 38,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 42,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 43,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 49,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 50,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/spec.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/test.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/test/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-jest/test/fixtures/samples/jest/tests/jest.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "jest/no-disabled-tests",
    "severity": 1,
  },
  Object {
    "column": 4,
    "line": 11,
    "rule": "jest/no-focused-tests",
    "severity": 2,
  },
  Object {
    "column": 4,
    "line": 19,
    "rule": "jest/no-identical-title",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 28,
    "rule": "jest/prefer-to-have-length",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 39,
    "rule": "jest/valid-expect",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-node/test/fixtures/rules/node/node.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 27,
    "rule": "handle-callback-err",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es6/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es6-node/fileSize.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es6-node/loudException.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es7/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 12,
    "line": 7,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es7/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es8/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es9/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es9-object-spread/contrived.bad.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 7,
    "rule": "prefer-object-spread",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es9-object-spread/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-node/test/fixtures/samples/es10/contrived.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react/react.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 15,
    "rule": "react/default-props-match-prop-types",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 30,
    "rule": "react/default-props-match-prop-types",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 54,
    "rule": "react/default-props-match-prop-types",
    "severity": 2,
  },
  Object {
    "column": 34,
    "line": 102,
    "rule": "react/jsx-boolean-value",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 115,
    "rule": "react/jsx-closing-bracket-location",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 129,
    "rule": "react/jsx-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 50,
    "line": 129,
    "rule": "react/jsx-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 140,
    "rule": "react/jsx-equals-spacing",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 140,
    "rule": "react/jsx-equals-spacing",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 158,
    "rule": "react/jsx-fragments",
    "severity": 1,
  },
  Object {
    "column": 35,
    "line": 207,
    "rule": "react/jsx-handler-names",
    "severity": 2,
  },
  Object {
    "column": 35,
    "line": 211,
    "rule": "react/jsx-handler-names",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 230,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 230,
    "rule": "react/jsx-indent-props",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 246,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 246,
    "rule": "react/jsx-indent",
    "severity": 2,
  },
  Object {
    "column": 29,
    "line": 260,
    "rule": "react/jsx-key",
    "severity": 1,
  },
  Object {
    "column": 35,
    "line": 281,
    "rule": "react/jsx-no-bind",
    "severity": 1,
  },
  Object {
    "column": 35,
    "line": 285,
    "rule": "react/jsx-no-bind",
    "severity": 1,
  },
  Object {
    "column": 22,
    "line": 310,
    "rule": "react/jsx-no-comment-textnodes",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 318,
    "rule": "react/jsx-no-comment-textnodes",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 342,
    "rule": "react/jsx-no-duplicate-props",
    "severity": 2,
  },
  Object {
    "column": 72,
    "line": 360,
    "rule": "react/jsx-no-target-blank",
    "severity": 1,
  },
  Object {
    "column": 24,
    "line": 371,
    "rule": "react/jsx-no-undef",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 385,
    "rule": "react/jsx-pascal-case",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 398,
    "rule": "jsx-quotes",
    "severity": 2,
  },
  Object {
    "column": 31,
    "line": 416,
    "rule": "react/jsx-tag-spacing",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 427,
    "rule": "react/jsx-tag-spacing",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 446,
    "rule": "react/jsx-wrap-multilines",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 470,
    "rule": "react/no-children-prop",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 499,
    "rule": "react/no-deprecated",
    "severity": 1,
  },
  Object {
    "column": 13,
    "line": 531,
    "rule": "react/no-direct-mutation-state",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 562,
    "rule": "react/no-is-mounted",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 598,
    "rule": "react/no-render-return-value",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 623,
    "rule": "react/no-string-refs",
    "severity": 2,
  },
  Object {
    "column": 48,
    "line": 623,
    "rule": "babel/semi",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 654,
    "rule": "react/no-unescaped-entities",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 654,
    "rule": "react/no-unescaped-entities",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 654,
    "rule": "react/no-unescaped-entities",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 674,
    "rule": "react/no-unknown-property",
    "severity": 2,
  },
  Object {
    "column": 42,
    "line": 700,
    "rule": "react/prefer-es6-class",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 728,
    "rule": "react/prop-types",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 768,
    "rule": "prefer-import/prefer-import-over-require",
    "severity": 1,
  },
  Object {
    "column": 9,
    "line": 780,
    "rule": "react/require-render-return",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 798,
    "rule": "react/self-closing-comp",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 816,
    "rule": "react/sort-comp",
    "severity": 2,
  },
  Object {
    "column": 22,
    "line": 860,
    "rule": "react/style-prop-object",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 872,
    "rule": "react/void-dom-elements-no-children",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react/react-foreign-proptypes.js 1`] = `
Array [
  Object {
    "column": 9,
    "line": 6,
    "rule": "react/forbid-foreign-prop-types",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react/react-jsx-extension.jsx 1`] = `
Array [
  Object {
    "column": 16,
    "line": 7,
    "rule": "react/jsx-filename-extension",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react/react-missing-import.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 3,
    "rule": "react/react-in-jsx-scope",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react/react-no-unused.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react-hooks/call-at-top-level.js 1`] = `
Array [
  Object {
    "column": 13,
    "line": 17,
    "rule": "react-hooks/rules-of-hooks",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 27,
    "rule": "react-hooks/rules-of-hooks",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "react-hooks/rules-of-hooks",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react-hooks/custom-hooks.js 1`] = `
Array [
  Object {
    "column": 9,
    "line": 20,
    "rule": "react-hooks/rules-of-hooks",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react-hooks/function-deps.js 1`] = `
Array [
  Object {
    "column": 15,
    "line": 7,
    "rule": "react-hooks/exhaustive-deps",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react-hooks/instance-like-variables.js 1`] = `
Array [
  Object {
    "column": 28,
    "line": 10,
    "rule": "react-hooks/exhaustive-deps",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/rules/react-hooks/missing-effect-deps.js 1`] = `
Array [
  Object {
    "column": 12,
    "line": 20,
    "rule": "react-hooks/exhaustive-deps",
    "severity": 1,
  },
]
`;

exports[`should pass on packages/eslint-config-react/test/fixtures/samples/react/contrived-old-es7.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-react/test/fixtures/samples/react/contrived-old-es7.good.test.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-react/test/fixtures/samples/react/contrived-old-es8.good.js 1`] = `Array []`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/Vue.vue 1`] = `
Array [
  Object {
    "column": 20,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 33,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 24,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 28,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 30,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 31,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 33,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 34,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 36,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-async-computed-properties.vue 1`] = `
Array [
  Object {
    "column": 20,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 33,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 24,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 28,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 30,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 31,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 33,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 34,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 36,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-dupe-attributes.vue 1`] = `
Array [
  Object {
    "column": 29,
    "line": 11,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 12,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 13,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 13,
    "rule": "vue/no-parsing-error",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 14,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 31,
    "line": 14,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 31,
    "line": 14,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 15,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 15,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 15,
    "rule": "vue/no-parsing-error",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-dupe-keys.vue 1`] = `
Array [
  Object {
    "column": 9,
    "line": 11,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 19,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 23,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-reserved-keys.vue 1`] = `
Array [
  Object {
    "column": 9,
    "line": 7,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 10,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 11,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 16,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 20,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-shared-component-data.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 7,
    "rule": "vue/no-shared-component-data",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-side-effects-in-computed-properties.vue 1`] = `
Array [
  Object {
    "column": 13,
    "line": 8,
    "rule": "vue/no-side-effects-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 13,
    "rule": "vue/no-side-effects-in-computed-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-template-key.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 10,
    "rule": "vue/no-template-key",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 11,
    "rule": "vue/no-template-key",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 12,
    "rule": "vue/no-template-key",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 12,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-textarea-mustache.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 9,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 9,
    "rule": "vue/no-textarea-mustache",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-unused-components.vue 1`] = `Array []`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-no-use-vif-with-vfor.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 12,
    "rule": "vue/valid-v-for",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 13,
    "rule": "vue/no-use-v-if-with-v-for",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 17,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 17,
    "rule": "vue/valid-v-for",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 19,
    "rule": "vue/no-use-v-if-with-v-for",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-require-v-for-key.vue 1`] = `Array []`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-require-valid-default-prop.vue 1`] = `
Array [
  Object {
    "column": 9,
    "line": 31,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 33,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 35,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 41,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 43,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 45,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 47,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 49,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-return-in-computed-property.vue 1`] = `
Array [
  Object {
    "column": 12,
    "line": 18,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 23,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
]
`;

exports[`should pass on packages/eslint-config-vue/test/fixtures/rules/vue-valid-directives.vue 1`] = `
Array [
  Object {
    "column": 10,
    "line": 12,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 10,
    "line": 13,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 14,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 10,
    "line": 14,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
]
`;
